--- a/src/app/parts/official-nav-and-search/official-nav-and-search.component.html
+++ b/src/app/parts/official-nav-and-search/official-nav-and-search.component.html
@@ -4,8 +4,8 @@
     <input type="search" pInputText placeholder="Search" style=" width: 100%" >
   </div> -->
   <div>
-    <input type="text" pInputText placeholder="Search" style="margin-right: 50px ; width: 150px">
-    <button type="button" pButton label="Search" icon="las la-search" style="margin-right: 25px" ></button>
+    <!-- <input type="text" pInputText placeholder="Search" style="margin-right: 50px ; width: 150px">
+    <button type="button" pButton label="Search" icon="las la-search" style="margin-right: 25px" ></button> -->
     <p-splitButton [showTransitionOptions]="'0ms'" [hideTransitionOptions]="'0ms'" label="Connexion" icon="las la-sign-in-alt fa-lg"  [model]="boutton"></p-splitButton>
   </div>
 </p-menubar>
