--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,16 +1,16 @@
 <div class="sidebar">
     <div class="sidebar-brand">
-      <h2><span class="las la-chess"></span>KamJobs</h2>
+      <h2 (click)="router.navigate(['/offres'])" style="cursor: pointer;"><span class="las la-chess"></span>KamJobs</h2>
     </div>
     <div class="sidebar-menu">
       <ul>
-        <li><a class="active" href=""><span class="las la-igloo"></span><span>Dashboard</span></a></li>
-        <li><a href=""><span class="las la-users"></span><span>Customers</span></a></li>
-        <li><a href=""><span class="las la-clipboard-list"></span><span>Projects</span></a></li>
-        <li><a href=""><span class="las la-shipping-fast"></span><span>Orders</span></a></li>
-        <li><a href=""><span class="las la-receipt"></span><span>Inventory</span></a></li>
-        <li><a href=""><span class="las la-user-circle"></span><span>Accounts</span></a></li>
-        <li><a href=""><span class="las la-clipboard-list"></span><span>Tasks</span></a></li>
+        <li><a routerLinkActive="active" [routerLink]="['/admin/dashboard']" ><span class="las la-igloo"></span><span>Dashboard</span></a></li>
+        <li><a routerLinkActive="active" [routerLink]="['/admin/tableEmployeurs']" ><span class="las la-user-circle"></span><span>Gestion Employeurs</span></a></li>
+        <li><a routerLinkActive="active" [routerLink]="['/admin/tableCandidats']" ><span class="las la-graduation-cap"></span><span>Gestion Candidats</span></a></li>
+        <li><a routerLinkActive="active" [routerLink]="['/admin/blog/home']" ><span class="las la-blog"></span><span>Affichage Blogs</span></a></li>
+        <li><a routerLinkActive="active" [routerLink]="['/admin/blog/form']" ><span class="las la-blog"></span><span>Gestion Blogs</span></a></li>
+        <li><a routerLinkActive="active" [routerLink]="['/admin/tests/home']" ><span class="las la-clipboard-list"></span><span>Gestion Tests</span></a></li>
+        <li><a routerLinkActive="active" [routerLink]="['/admin/test/form']" ><span class="las la-clipboard-list"></span><span>Tasks</span></a></li>
       </ul>
     </div>
   </div>
@@ -20,7 +20,6 @@
         <label for="">
           <span class="las la-bars"></span>
         </label>
-        Dashboard
       </h2>
   
       <div class="search-wrapper">
