--- a/src/app/pages/employeur/home/home.component.css
+++ b/src/app/pages/employeur/home/home.component.css
@@ -1,3 +1,5 @@
+
+
 :root{
   --main-color: #DD2F6E;
   --color-dark: #1D2231;
@@ -11,6 +13,7 @@
   box-sizing: border-box;
   list-style-type: none;
   text-decoration: none;
+  font-weight: bold;
 }
 
 .sidebar{
@@ -29,7 +32,7 @@
 .sidebar-brand {
   height: 90px;
   padding: 1rem 0rem 1rem 2rem;
-  color: #bfcada;
+  color: #fff;
 }
 
 .sidebar-brand span{
@@ -43,9 +46,8 @@
   padding-left: 2rem;
 }
 .sidebar-menu a {
-  cursor: pointer;
   display: block;
-  color: #bcc9d1;
+  color: white;
   font-size: 1.1rem;
   padding-left: 1rem;
 }
@@ -59,7 +61,6 @@
   background: white;
   padding-top: 1rem ;
   padding-bottom: 1rem;
-  font-weight: bold;
   color: #3039b8;
   border-radius: 30px 0px 0px 30px;
 }
@@ -72,7 +73,6 @@ header{
   position: fixed;
   left: 345px;
   width: calc(100% - 345px);
-  background-color: #ffffff;
   top: 0;
   z-index: 100;
 }
@@ -87,7 +87,7 @@ header{
 }
 
 .search-wrapper input {
-  height: 100%;
+ height: 100%;
   padding: .5rem;
   border: none;
   outline: none;
@@ -115,7 +115,7 @@ header{
 }
 
 /*.user-wrapper h4 {*/
-/*margin-bottom: 0rem !important;*/
+  /*margin-bottom: 0rem !important;*/
 /*}*/
 
 .sidebar-menu {
@@ -146,18 +146,17 @@ main {
 .card-single {
   display: flex;
   justify-content: space-between;
-  background: 8390A2;
+  background: white;
   padding: 2rem;
   border-radius: 2px;
 }
 
 .card-single div:last-child span{
   font-size: 3rem;
-  color: #f7d9d9;
+  color: #00A4E5;
 
 }
 
 .card-single div:last-child span{
   color: #8390A2;
 }
-
