--- a/src/app/pages/blog-home/blog-home.component.html
+++ b/src/app/pages/blog-home/blog-home.component.html
@@ -1,39 +1,14 @@
-<section class="articles">
+<section class="articles" >
 
-  <div class="article">
+  <div class="article" *ngFor="let i of blog" >
     <div class="left">
-      <img src="https://cdn.pixabay.com/photo/2016/11/18/19/01/paris-1836415_1280.jpg" alt="">
+      <img src="{{i.logo}}" alt="">
     </div>
     <div class="right">
-      <p class="date">Juillet, 24, 2020</p>
-      <h1>Paris - La ville des lumières, pourquoi ?</h1>
-      <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad cupiditate repellendus dolor necessitatibus. Modi, quos! Explicabo voluptates vero ullam quis ipsum impedit illum numquam cum quaerat animi? Ad, fugiat neque.</p>
-      <p class="auteur">Julie Lablonde</p>
-    </div>
-  </div>
-
-
-  <div class="article">
-    <div class="left">
-      <img src="https://cdn.pixabay.com/photo/2016/01/19/17/15/night-1149601_1280.jpg" alt="">
-    </div>
-    <div class="right">
-      <p class="date">Juillet, 24, 2020</p>
-      <h1>Interview - Une ville nocture est elle si belle ?</h1>
-      <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad cupiditate repellendus dolor necessitatibus. Modi, quos! Explicabo voluptates vero ullam quis ipsum impedit illum numquam cum quaerat animi? Ad, fugiat neque.</p>
-      <p class="auteur">Julie Lablonde</p>
-    </div>
-  </div>
-
-  <div class="article">
-    <div class="left">
-      <img src="https://cdn.pixabay.com/photo/2017/01/09/16/15/calanque-1966920_1280.jpg" alt="">
-    </div>
-    <div class="right">
-      <p class="date">Juillet, 24, 2020</p>
-      <h1>Les calanques, une belle destination touristique</h1>
-      <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad cupiditate repellendus dolor necessitatibus. Modi, quos! Explicabo voluptates vero ullam quis ipsum impedit illum numquam cum quaerat animi? Ad, fugiat neque.</p>
-      <p class="auteur">Julie Lablonde</p>
+      <p class="date"> posted at : {{i.created_at | date: 'dd/MM/yyyy'}}</p>
+      <h1>{{i.titre}}</h1>
+      <p class="description">{{i.description | slice:0:10}} <br> <span class="suite">voir la suite</span></p>
+      <!--<p class="auteur">Julie Lablonde</p>-->
     </div>
   </div>
 </section>
