--- a/src/app/pages/offres/offres.component.html
+++ b/src/app/pages/offres/offres.component.html
@@ -81,7 +81,7 @@
         <td>{{emploi.exigence_emploi}}</td>
         <td>{{emploi.niveau_education}}</td>
         <td>{{emploi.experience}}</td>
-        <td>{{emploi.created_at |date:'MMM-dd hh:mm:ss' }}</td>
+        <td>{{emploi.created_at |date:'yy-MMM-dd' }}</td>
 
       </tr>
     </ng-template>
