--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,6 @@
-<div class="sidebar">
+
+<p-sidebar [(visible)]="display">
+  <div class="sidebar">
     <div class="sidebar-brand">
       <h2 (click)="router.navigate(['/offres'])" style="cursor: pointer;"><span class="las la-chess"></span>KamJobs</h2>
     </div>
@@ -10,22 +12,20 @@
         <li><a routerLinkActive="active" [routerLink]="['/admin/blog/home']" ><span class="las la-blog"></span><span>Affichage Blogs</span></a></li>
         <li><a routerLinkActive="active" [routerLink]="['/admin/blog/form']" ><span class="las la-blog"></span><span>Gestion Blogs</span></a></li>
         <li><a routerLinkActive="active" [routerLink]="['/admin/tests/home']" ><span class="las la-clipboard-list"></span><span>Gestion Tests</span></a></li>
-        <li><a routerLinkActive="active" [routerLink]="['/admin/test/form']" ><span class="las la-clipboard-list"></span><span>Tasks</span></a></li>
       </ul>
     </div>
   </div>
+</p-sidebar>
+
   <div class="main-content">
     <header>
-      <h2>
+      <h2 (click)="display = true">
         <label for="">
           <span class="las la-bars"></span>
         </label>
       </h2>
   
-      <div class="search-wrapper">
-        <span class="las la-search"></span>
-        <input type="search" placeholder="Search Here !">
-      </div>
+      
   
       <div class="user-wrapper">
         <img src="https://scontent.ftun2-1.fna.fbcdn.net/v/t1.6435-9/94610675_2612309645724396_3824631985830100992_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=174925&_nc_ohc=LB-5A8g5qNoAX8CpCR6&_nc_ht=scontent.ftun2-1.fna&oh=002b7e7bbb2230d2c9c76f0174df9ad6&oe=60A7D585" alt="jnayah" width="40px" height="40px">
@@ -33,9 +33,7 @@
           <h4>Mourad Jnayah</h4>
           <small>Super Admin</small>
         </div>
-  
       </div>
-      
     </header>
     <main>
         <router-outlet></router-outlet>
