--- a/src/app/admin/tests/tests.component.html
+++ b/src/app/admin/tests/tests.component.html
@@ -4,10 +4,10 @@
 
     <ng-template pTemplate="footer">
 
-      <p-dialog header="Gestion questions " [draggable]="false" [(visible)]="display">
+      <p-dialog header="Gestion questions " [modal]="true" [draggable]="false" [(visible)]="display">
 
         <!-- Form for modifying a test -->
-        <p-dialog header="Modifier test" [draggable]="false" [(visible)]="testModifDisplay">
+        <p-dialog header="Modifier test" [modal]="true" [draggable]="false" [(visible)]="testModifDisplay">
           <div style="width:50vw;">
             <input type="text" pInputText value="{{test.domaine}}" [(ngModel)]="test.domaine" placeholder="test" />
 
@@ -38,7 +38,7 @@
               <div>
 
                 <!-- Form for modifying a question -->
-                <p-dialog header="Modifier question" [draggable]="false"  [(visible)]="questionModifDisplay">
+                <p-dialog header="Modifier question" [modal]="true" [draggable]="false"  [(visible)]="questionModifDisplay">
                   <div style="width:50vw;">
                     <input type="text" pInputText value="{{modif_question.question}}"
                       [(ngModel)]="modif_question.question" placeholder="question" />
@@ -115,10 +115,10 @@
 
 
 <div >
-  <p-card header="Ajout test" styleClass="p-card-shadow p m-2 " >
+  <p-card >
 
     <ng-template pTemplate="footer">
-      <p-dialog header="Ajout test" [draggable]="false" [modal]="true" [(visible)]="display2">
+      <p-dialog header="Ajout test" [modal]="true" [draggable]="false" [modal]="true" [(visible)]="display2">
         <div style="width:40w;">
           <form>
       
