--- a/src/app/pages/offres/offre/offre.component.html
+++ b/src/app/pages/offres/offre/offre.component.html
@@ -1,26 +1,26 @@
-<ng-container *ngFor="let i of offres">
-<p-fieldset legend="About us :" [toggleable]="true" [transitionOptions]="'10ms'" *ngIf="i.id == idRoute " >
-  <span > Enreprise description: {{i.description_emploi}} </span>
-  {{i.id}}
-  <!--<span *ngIf="i.id === idRoute">{{i.description_emploi}} </span>-->
+<ng-container >
+<p-fieldset legend="About us :" [toggleable]="true" [transitionOptions]="'10ms'" >
+  <div > Enreprise: {{offre.employeur.nom_entreprise}} </div>
+  <div > Enreprise description: {{offre.employeur.description_entreprise}} </div>
 </p-fieldset>
 </ng-container>
 
-<ng-container *ngFor="let i of offres">
+<ng-container >
 
-<p-fieldset legend="Details :" [toggleable]="true" [transitionOptions]="'10ms'" *ngIf="i.id == idRoute ">
+<p-fieldset legend="Details :" [toggleable]="true" [transitionOptions]="'10ms'">
   <p-splitter [style]="{'height': '300px'}">
     <ng-template pTemplate>
       <span style="text-transform: uppercase ; font-style: oblique ; font-family: 'Noto Sans JP', sans-serif ; font-weight: bold;text-decoration: underline">  Détails de l'annonce :<br>
       </span> <br>
       <ul>
-        <li>    <p> <span style="font-weight: bolder; list-style-type: none"> niveau d'éducation : </span>{{i.niveau_education}}  </p></li>
-        <li>      <p> <span style="font-weight: bolder; list-style-type: none"> experience : </span>{{i.experience}}  </p></li>
+        <li>    <p> <span style="font-weight: bolder; list-style-type: none"> niveau d'éducation : </span>{{offre.niveau_education}}  </p></li>
+        <li>      <p> <span style="font-weight: bolder; list-style-type: none"> experience : </span>{{offre.experience}}  </p></li>
 
       </ul>
     </ng-template>
     <ng-template pTemplate>
       <span style="text-transform: uppercase ; font-style: oblique ; font-family: 'Noto Sans JP', sans-serif ; font-weight: bold;text-decoration: underline">  Description de l'annonce : </span>
+      <span > Enreprise: {{offre.description_emplo}} </span>
     </ng-template>
   </p-splitter>
 </p-fieldset>
