--- a/src/app/pages/blog-form/blog-form.component.html
+++ b/src/app/pages/blog-form/blog-form.component.html
@@ -1,7 +1,6 @@
 <p-toast></p-toast>
 
-<div class="all">
-  <form class="box">
+
     <!--<div class="p-fluid p-formgrid p-grid ">-->
       <!--<div class="p-field p-col-12 p-md-6 ">-->
         <!--<label for="nom">Nom & Prénom</label>-->
@@ -35,47 +34,94 @@
 
     <!--</div>-->
 
-    <div class="stepsdemo-content">
-      <p-card>
-        <ng-template pTemplate="title">
-Ajouter une description
 
-        </ng-template>
-        <ng-template pTemplate="subtitle">
+<!--<p-button (click)="showPositionDialog('bottom')" icon="pi pi-arrow-up" label="Bottom" styleClass="p-button-warning"></p-button>-->
+
+<!--<p-dialog header="Godfather I" [(visible)]="displayPosition" [position]="position" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"-->
+          <!--[draggable]="false" [resizable]="false">-->
+  <!--<form class="box">-->
+    <!--<div class="stepsdemo-content">-->
+      <!--<p-card>-->
+        <!--<ng-template pTemplate="title">-->
+          <!--Ajouter une description-->
+        <!--</ng-template>-->
+              <!--<ng-template pTemplate="subtitle">-->
+                <!--Taper les données-->
+              <!--</ng-template>-->
+              <!--<ng-template pTemplate="content">-->
+                <!--<div class="p-fluid">-->
+                  <!--<div class="p-field">-->
+                    <!--<label for="titre">Titre</label>-->
+                    <!--<input #titre="ngModel" name="titre" id="titre" type="text" required pInputText [(ngModel)]="blog.titre" [ngClass]="{'ng-dirty': (titre.dirty && titre.invalid)}">-->
+                    <!--<small *ngIf="(titre.dirty && titre.invalid)" class="p-error">titre is required.</small>-->
+                  <!--</div>-->
+                  <!--<div class="p-field">-->
+                    <!--<label for="logo">logo</label>-->
+                    <!--<input #logo="ngModel" id="logo" name="logo"  type="text" required pInputText [(ngModel)]="blog.logo" [ngClass]="{'ng-dirty':(logo.dirty && logo.invalid)}">-->
+                    <!--<small class="p-error" *ngIf="(logo.dirty && logo.invalid)">logo is required.</small>-->
+                  <!--</div>-->
+                  <!--<div class="p-field">-->
+                    <!--<label for="description">Age</label>-->
+                    <!--<input #description="ngModel" id="description" name="description"  type="text" required pInputText [(ngModel)]="blog.description" [ngClass]="(description.dirty && description.invalid)">-->
+                    <!--<small class="p-error" *ngIf="(description.dirty && description.invalid)">description is required.</small>-->
+                  <!--</div>-->
+                <!--</div>-->
+              <!--</ng-template>-->
+              <!--<ng-template pTemplate="footer">-->
+                <!--<div class="p-grid p-nogutter p-justify-end">-->
+                  <!--<p-button label="Ajouter" (onClick)="ajouter()" icon="pi pi-angle-right" iconPos="right"></p-button>-->
+                <!--</div>-->
+              <!--</ng-template>-->
+            <!--</p-card>-->
+          <!--</div>-->
+
+
+
+        <!--</form>-->
+
+
+
+    <!--</p-dialog>-->
+<form class="box">
+  <div class="stepsdemo-content">
+    <p-card>
+      <ng-template pTemplate="title">
+        Ajouter une description
+
+      </ng-template>
+      <ng-template pTemplate="subtitle">
         Taper les données
-        </ng-template>
-        <ng-template pTemplate="content">
-          <div class="p-fluid">
-            <div class="p-field">
-              <label for="titre">Titre</label>
-              <input #titre="ngModel" name="titre" id="titre" type="text" required pInputText [(ngModel)]="blog.titre" [ngClass]="{'ng-dirty': (titre.dirty && titre.invalid)}">
-              <small *ngIf="(titre.dirty && titre.invalid)" class="p-error">titre is required.</small>
-            </div>
-            <div class="p-field">
-              <label for="logo">logo</label>
-              <input #logo="ngModel" id="logo" name="logo"  type="text" required pInputText [(ngModel)]="blog.logo" [ngClass]="{'ng-dirty':(logo.dirty && logo.invalid)}">
-              <small class="p-error" *ngIf="(logo.dirty && logo.invalid)">logo is required.</small>
-            </div>
-            <div class="p-field">
-              <label for="description">Age</label>
-              <input #description="ngModel" id="description" name="description"  type="text" required pInputText [(ngModel)]="blog.description" [ngClass]="(description.dirty && description.invalid)">
-              <small class="p-error" *ngIf="(description.dirty && description.invalid)">description is required.</small>
-            </div>
+      </ng-template>
+      <ng-template pTemplate="content">
+        <div class="p-fluid">
+          <div class="p-field">
+            <label for="titre">Titre</label>
+            <input #titre="ngModel" name="titre" id="titre" type="text" required pInputText [(ngModel)]="blog.titre" [ngClass]="{'ng-dirty': (titre.dirty && titre.invalid)}">
+            <small *ngIf="(titre.dirty && titre.invalid)" class="p-error">titre is required.</small>
           </div>
-        </ng-template>
-        <ng-template pTemplate="footer">
-          <div class="p-grid p-nogutter p-justify-end">
-            <p-button label="Ajouter" (onClick)="ajouter()" icon="pi pi-angle-right" iconPos="right"></p-button>
+          <div class="p-field">
+            <label for="logo">logo</label>
+            <input #logo="ngModel" id="logo" name="logo"  type="text" required pInputText [(ngModel)]="blog.logo" [ngClass]="{'ng-dirty':(logo.dirty && logo.invalid)}">
+            <small class="p-error" *ngIf="(logo.dirty && logo.invalid)">logo is required.</small>
           </div>
-        </ng-template>
-      </p-card>
-    </div>
+          <div class="p-field">
+            <label for="description">Age</label>
+            <input #description="ngModel" id="description" name="description"  type="text" required pInputText [(ngModel)]="blog.description" [ngClass]="(description.dirty && description.invalid)">
+            <small class="p-error" *ngIf="(description.dirty && description.invalid)">description is required.</small>
+          </div>
+        </div>
+      </ng-template>
+      <ng-template pTemplate="footer">
+        <div class="p-grid p-nogutter p-justify-end">
+          <p-button label="Ajouter" (onClick)="ajouter()" icon="pi pi-angle-right" iconPos="right"></p-button>
+        </div>
+      </ng-template>
+    </p-card>
+  </div>
 
 
 
-  </form>
-
-</div>
+</form>
 
 
 <div class="card">
@@ -109,7 +155,7 @@ Ajouter une description
               <input pInputText type="text" [(ngModel)]="blog.logo" >
             </ng-template>
             <ng-template pTemplate="output">
-              {{blog.logo}}
+              {{blog.logo | slice:0:18}}
             </ng-template>
           </p-cellEditor>
         </td>
@@ -119,7 +165,7 @@ Ajouter une description
               <input pInputText type="text" [(ngModel)]="blog.description" required>
             </ng-template>
             <ng-template pTemplate="output">
-              {{blog.description}}
+              {{blog.description | slice:0:8}}
             </ng-template>
           </p-cellEditor>
         </td>
