--- a/src/app/pages/blog-form/blog-form.component.html
+++ b/src/app/pages/blog-form/blog-form.component.html
@@ -34,7 +34,6 @@
 
     <!--</div>-->
 
-<<<<<<< HEAD
 
 <!--<p-button (click)="showPositionDialog('bottom')" icon="pi pi-arrow-up" label="Bottom" styleClass="p-button-warning"></p-button>-->
 
@@ -83,29 +82,162 @@
 
 
     <!--</p-dialog>-->
-<form class="box">
-  <div class="stepsdemo-content">
-    <p-card>
-      <ng-template pTemplate="title">
-        Ajouter une description
+<!--<form class="box">-->
+  <!--<div class="stepsdemo-content">-->
+    <!--<p-card>-->
+      <!--<ng-template pTemplate="title">-->
+        <!--Ajouter une description-->
 
-      </ng-template>
-      <ng-template pTemplate="subtitle">
-        Taper les données
-      </ng-template>
-      <ng-template pTemplate="content">
-        <div class="p-fluid">
-          <div class="p-field">
-            <label for="titre">Titre</label>
-            <input #titre="ngModel" name="titre" id="titre" type="text" required pInputText [(ngModel)]="blog.titre" [ngClass]="{'ng-dirty': (titre.dirty && titre.invalid)}">
-            <small *ngIf="(titre.dirty && titre.invalid)" class="p-error">titre is required.</small>
-=======
-      
+      <!--</ng-template>-->
+      <!--<ng-template pTemplate="subtitle">-->
+        <!--Taper les données-->
+      <!--</ng-template>-->
+      <!--<ng-template pTemplate="content">-->
+        <!--<div class="p-fluid">-->
+          <!--<div class="p-field">-->
+            <!--<label for="titre">Titre</label>-->
+            <!--<input #titre="ngModel" name="titre" id="titre" type="text" required pInputText [(ngModel)]="blog.titre" [ngClass]="{'ng-dirty': (titre.dirty && titre.invalid)}">-->
+            <!--<small *ngIf="(titre.dirty && titre.invalid)" class="p-error">titre is required.</small>-->
+<!--=======-->
+      <!---->
+<!--<div >-->
+  <!--<p-card  >-->
+
+    <!--<ng-template pTemplate="content">-->
+      <!--<p-dialog header="Ajout test" [modal]="true" [draggable]="false" [(visible)]="display">-->
+
+        <!--<ng-template pTemplate="title">-->
+          <!--Ajouter une description-->
+
+        <!--</ng-template>-->
+        <!--<ng-template pTemplate="subtitle">-->
+          <!--Taper les données-->
+        <!--</ng-template>-->
+        <!--<ng-template pTemplate="content">-->
+          <!--<div class="p-fluid">-->
+            <!--<div class="p-field">-->
+              <!--<label for="titre">Titre</label>-->
+              <!--<input #titre="ngModel" name="titre" id="titre" type="text" required pInputText [(ngModel)]="blog.titre"-->
+                <!--[ngClass]="{'ng-dirty': (titre.dirty && titre.invalid)}">-->
+              <!--<small *ngIf="(titre.dirty && titre.invalid)" class="p-error">titre is required.</small>-->
+            <!--</div>-->
+            <!--<div class="p-field">-->
+              <!--<label for="logo">logo</label>-->
+              <!--<input #logo="ngModel" id="logo" name="logo" type="text" required pInputText [(ngModel)]="blog.logo"-->
+                <!--[ngClass]="{'ng-dirty':(logo.dirty && logo.invalid)}">-->
+              <!--<small class="p-error" *ngIf="(logo.dirty && logo.invalid)">logo is required.</small>-->
+            <!--</div>-->
+            <!--<div class="p-field">-->
+              <!--<label for="description">Contenu</label>-->
+              <!--<input #description="ngModel" id="description" name="description" type="text" required pInputText [rows]="3" [cols]="30"-->
+                <!--[(ngModel)]="blog.description" [ngClass]="(description.dirty && description.invalid)">-->
+              <!--<small class="p-error" *ngIf="(description.dirty && description.invalid)">description is required.</small>-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="p-field">-->
+            <!--<label for="logo">logo</label>-->
+            <!--<input #logo="ngModel" id="logo" name="logo"  type="text" required pInputText [(ngModel)]="blog.logo" [ngClass]="{'ng-dirty':(logo.dirty && logo.invalid)}">-->
+            <!--<small class="p-error" *ngIf="(logo.dirty && logo.invalid)">logo is required.</small>-->
+          <!--</div>-->
+          <!--<div class="p-field">-->
+            <!--<label for="description">Age</label>-->
+            <!--<input #description="ngModel" id="description" name="description"  type="text" required pInputText [(ngModel)]="blog.description" [ngClass]="(description.dirty && description.invalid)">-->
+            <!--<small class="p-error" *ngIf="(description.dirty && description.invalid)">description is required.</small>-->
+          <!--</div>-->
+      <!---->
+        <!--</div>-->
+      <!--</ng-template>-->
+      <!---->
+      <!--<ng-template pTemplate="footer">-->
+        <!--<div class="p-grid p-nogutter p-justify-end">-->
+          <!--<p-button label="Ajouter" (onClick)="ajouter()" icon="pi pi-angle-right" iconPos="right"></p-button>-->
+        <!--</div>-->
+      <!--</ng-template>-->
+    <!--</p-card>-->
+  <!--</div>-->
+
+
+
+<!--</form>-->
+<!--=======-->
+        <!--</ng-template>-->
+      <!--</p-dialog>-->
+    <!---->
+      <!--<button pButton pRipple type="button" (click)="display=true" label="Ajout Test" icon="pi pi-plus"-->
+      <!--class="p-button-raised p-button-text "></button>-->
+    <!--</ng-template>-->
+
+  <!--</p-card>-->
+<!--</div>-->
+
+
+<!--<div class="card">-->
+  <!--<p-table [value]="blog2" dataKey="id" editMode="row" [paginator]="true" [rows]="rows" [showCurrentPageReport]="true"-->
+    <!--[(first)]="first" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"-->
+    <!--[rowsPerPageOptions]="[2,5,15]">-->
+    <!--<ng-template pTemplate="header">-->
+      <!--<tr>-->
+        <!--<th>titre</th>-->
+        <!--<th>logo</th>-->
+        <!--<th>description</th>-->
+        <!--<th>Modifier</th>-->
+        <!--<th>Supprimer</th>-->
+
+      <!--</tr>-->
+    <!--</ng-template>-->
+    <!--<ng-template pTemplate="body" let-blog let-editing="editing" let-ri="id">-->
+      <!--<tr [pEditableRow]="blog">-->
+        <!--<td pEditableColumn>-->
+          <!--<p-cellEditor>-->
+            <!--<ng-template pTemplate="input">-->
+              <!--<input pInputText type="text" [(ngModel)]="blog.titre">-->
+            <!--</ng-template>-->
+            <!--<ng-template pTemplate="output">-->
+              <!--{{blog.titre}}-->
+            <!--</ng-template>-->
+          <!--</p-cellEditor>-->
+        <!--</td>-->
+        <!--<td pEditableColumn>-->
+          <!--<p-cellEditor>-->
+            <!--<ng-template pTemplate="input">-->
+              <!--<input pInputText type="text" [(ngModel)]="blog.logo">-->
+            <!--</ng-template>-->
+            <!--<ng-template pTemplate="output">-->
+              <!--{{blog.logo | slice:0:18}}-->
+            <!--</ng-template>-->
+          <!--</p-cellEditor>-->
+        <!--</td>-->
+        <!--<td pEditableColumn>-->
+          <!--<p-cellEditor>-->
+            <!--<ng-template pTemplate="input">-->
+              <!--<input pInputText type="text" [(ngModel)]="blog.description" required>-->
+            <!--</ng-template>-->
+            <!--<ng-template pTemplate="output">-->
+              <!--{{blog.description | slice:0:8}}-->
+            <!--</ng-template>-->
+          <!--</p-cellEditor>-->
+        <!--</td>-->
+        <!--&lt;!&ndash;<button *ngIf="!editing" pButton pRipple type="button" pInitEditableRow icon="pi pi-pencil" (click)="onRowEditInit(blog)" class="p-button-rounded p-button-text"></button>&ndash;&gt;-->
+        <!--&lt;!&ndash;<button *ngIf="editing" pButton pRipple type="button" pSaveEditableRow icon="pi pi-check" (click)="onRowEditSave(blog, blog.id)" class="p-button-rounded p-button-text p-button-success p-mr-2"></button>&ndash;&gt;-->
+        <!--&lt;!&ndash;<button *ngIf="editing" pButton pRipple type="button" pCancelEditableRow icon="pi pi-times" (click)="onRowEditCancel(blog, ri)" class="p-button-rounded p-button-text p-button-danger"></button>&ndash;&gt;-->
+
+        <!--<td>-->
+          <!--<input type="button" icon="pi pi-pencil" pButton pRipple class="p-button-rounded p-mr-2"-->
+            <!--style="background-color: darkseagreen" (click)="onRowEditSave(blog,blog.id)">-->
+        <!--</td>-->
+        <!--<td><input type="button" icon="pi pi-trash" pButton pRipple class="p-button-rounded "-->
+            <!--style="background-color: darkred;" (click)="delete(blog.id)" icon="pi pi-check"></td>-->
+
+      <!--</tr>-->
+    <!--</ng-template>-->
+  <!--</p-table>-->
+<!--</div>-->
+
+
 <div >
   <p-card  >
-
     <ng-template pTemplate="content">
-      <p-dialog header="Ajout test" [modal]="true" [draggable]="false" [(visible)]="display">
+      <p-dialog header="Ajout blog" [modal]="true" [draggable]="false" [(visible)]="display">
 
         <ng-template pTemplate="title">
           Ajouter une description
@@ -119,64 +251,42 @@
             <div class="p-field">
               <label for="titre">Titre</label>
               <input #titre="ngModel" name="titre" id="titre" type="text" required pInputText [(ngModel)]="blog.titre"
-                [ngClass]="{'ng-dirty': (titre.dirty && titre.invalid)}">
+                     [ngClass]="{'ng-dirty': (titre.dirty && titre.invalid)}">
               <small *ngIf="(titre.dirty && titre.invalid)" class="p-error">titre is required.</small>
             </div>
             <div class="p-field">
               <label for="logo">logo</label>
               <input #logo="ngModel" id="logo" name="logo" type="text" required pInputText [(ngModel)]="blog.logo"
-                [ngClass]="{'ng-dirty':(logo.dirty && logo.invalid)}">
+                     [ngClass]="{'ng-dirty':(logo.dirty && logo.invalid)}">
               <small class="p-error" *ngIf="(logo.dirty && logo.invalid)">logo is required.</small>
             </div>
             <div class="p-field">
               <label for="description">Contenu</label>
-              <input #description="ngModel" id="description" name="description" type="text" required pInputText [rows]="3" [cols]="30"
-                [(ngModel)]="blog.description" [ngClass]="(description.dirty && description.invalid)">
+              <input #description="ngModel" id="description" name="description" type="text" required pInputText [rows]="5" [cols]="30"
+                     [(ngModel)]="blog.description" [ngClass]="(description.dirty && description.invalid)">
               <small class="p-error" *ngIf="(description.dirty && description.invalid)">description is required.</small>
             </div>
->>>>>>> 415672040a2ecd0421d69e76cd650b279b367509
           </div>
-          <div class="p-field">
-            <label for="logo">logo</label>
-            <input #logo="ngModel" id="logo" name="logo"  type="text" required pInputText [(ngModel)]="blog.logo" [ngClass]="{'ng-dirty':(logo.dirty && logo.invalid)}">
-            <small class="p-error" *ngIf="(logo.dirty && logo.invalid)">logo is required.</small>
+        </ng-template>
+        <ng-template pTemplate="footer">
+          <div class="p-grid p-nogutter p-justify-end">
+            <p-button label="Ajouter" (onClick)="ajouter()" icon="pi pi-angle-right" iconPos="right"></p-button>
           </div>
-<<<<<<< HEAD
-          <div class="p-field">
-            <label for="description">Age</label>
-            <input #description="ngModel" id="description" name="description"  type="text" required pInputText [(ngModel)]="blog.description" [ngClass]="(description.dirty && description.invalid)">
-            <small class="p-error" *ngIf="(description.dirty && description.invalid)">description is required.</small>
-          </div>
-        </div>
-      </ng-template>
-      <ng-template pTemplate="footer">
-        <div class="p-grid p-nogutter p-justify-end">
-          <p-button label="Ajouter" (onClick)="ajouter()" icon="pi pi-angle-right" iconPos="right"></p-button>
-        </div>
-      </ng-template>
-    </p-card>
-  </div>
-
-
-
-</form>
-=======
         </ng-template>
       </p-dialog>
-    
-      <button pButton pRipple type="button" (click)="display=true" label="Ajout Test" icon="pi pi-plus"
-      class="p-button-raised p-button-text "></button>
+
+      <button pButton pRipple type="button" (click)="display=true" label="Ajout Blog" icon="pi pi-plus"
+              class="p-button-raised p-button-text "></button>
     </ng-template>
 
   </p-card>
 </div>
->>>>>>> 415672040a2ecd0421d69e76cd650b279b367509
 
 
 <div class="card">
   <p-table [value]="blog2" dataKey="id" editMode="row" [paginator]="true" [rows]="rows" [showCurrentPageReport]="true"
-    [(first)]="first" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-    [rowsPerPageOptions]="[2,5,15]">
+           [(first)]="first" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+           [rowsPerPageOptions]="[2,5,15]">
     <ng-template pTemplate="header">
       <tr>
         <th>titre</th>
@@ -225,10 +335,10 @@
 
         <td>
           <input type="button" icon="pi pi-pencil" pButton pRipple class="p-button-rounded p-mr-2"
-            style="background-color: darkseagreen" (click)="onRowEditSave(blog,blog.id)">
+                 style="background-color: darkseagreen" (click)="onRowEditSave(blog,blog.id)">
         </td>
         <td><input type="button" icon="pi pi-trash" pButton pRipple class="p-button-rounded "
-            style="background-color: darkred;" (click)="delete(blog.id)" icon="pi pi-check"></td>
+                   style="background-color: darkred;" (click)="delete(blog.id)" icon="pi pi-check"></td>
 
       </tr>
     </ng-template>
