--- a/src/app/pages/employeur/home/home.component.css
+++ b/src/app/pages/employeur/home/home.component.css
@@ -1,5 +1,3 @@
-
-
 :root{
   --main-color: #DD2F6E;
   --color-dark: #1D2231;
@@ -22,12 +20,10 @@
   left: 0;
   top: 0;
   height: 100%;
-  background-color: #3039b8;
+  background-color: #00A4E5;
   z-index: 100;
 }
-.main-content{
-  margin-left: 345px;
-}
+
 
 .sidebar-brand {
   height: 90px;
@@ -61,7 +57,7 @@
   background: white;
   padding-top: 1rem ;
   padding-bottom: 1rem;
-  color: #3039b8;
+  color: #00A4E5;
   border-radius: 30px 0px 0px 30px;
 }
 
@@ -72,8 +68,7 @@ header{
   box-shadow: 2px 2px 6px rgba(0,0,0,0.2);
   background-color: white;
   position: fixed;
-  left: 345px;
-  width: calc(100% - 345px);
+  width: 100%;
   top: 0;
   z-index: 100;
 }
@@ -88,7 +83,7 @@ header{
 }
 
 .search-wrapper input {
- height: 100%;
+  height: 100%;
   padding: .5rem;
   border: none;
   outline: none;
@@ -116,7 +111,7 @@ header{
 }
 
 /*.user-wrapper h4 {*/
-  /*margin-bottom: 0rem !important;*/
+/*margin-bottom: 0rem !important;*/
 /*}*/
 
 .sidebar-menu {
@@ -161,3 +156,4 @@ main {
 .card-single div:last-child span{
   color: #8390A2;
 }
+  
