Fixed adding offres

--- a/src/app/pages/employeur/welcome/welcome.component.html
+++ b/src/app/pages/employeur/welcome/welcome.component.html
@@ -63,7 +63,7 @@
 
       <div class="p-field p-col-12 p-md-3">
         <label for="secteur">Domaine</label>
-        <p-dropdown id="secteur" [options]="secteurs" [(ngModel)]="offre.domaine" placeholder="Choisissez un secteur d'activités" name="secteur" optionLabel="secteur"[style]="{'minWidth': '14rem'}"></p-dropdown>
+        <p-dropdown id="secteur" [options]="secteurs" [(ngModel)]="selected_secteur" placeholder="Choisissez un secteur d'activités" name="secteur" optionLabel="secteur"[style]="{'minWidth': '14rem'}"></p-dropdown>
       </div>
 
       <!--<div class="p-field p-col-12 p-md-6">-->
